<package>
    <name>tuw_realsense_d435</name>
    <version>0.4.13</version>
    <description>rqt_image_view provides a GUI plugin for displaying images using image_transport.</description>
    <maintainer email="felix.koenig@protonmail.com">Felix Koenig</maintainer>
    <maintainer email="felix.koenig@tuwien.ac.at">Felix Koenig</maintainer>
    <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tinyxml</build_depend>
    <build_depend>cmake_modules</build_depend>

    <run_depend>tinyxml</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>

    <export>
    </export>
</package>
